@@ -2,6 +2,8 @@
 • Add possibility to disable colored outline for CDArts
 • Fix disc overlay for some CDArts
 • Fix extended info window for some resolutions
+• Minor playlists editor
+• Minor fixes
 
 [B]2.2.6[/B]
 • Change extension file '.png' to '.jpg' for games artworks
